src/FinancialForce Accounting/objects/WorkerLogGroup__c.object
<CustomObject>
    <customHelpPage>codahelpworkerloggroup</customHelpPage>
    <fields>
        <fullName>NotificationType__c</fullName>
        <formula>IF(AND(TotalNumberOfErrors__c=0,TotalNumberOfAborts__c=0,TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(TotalNumberOfErrors__c = TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>WorkerLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkerLog__c.IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkerLog__c.WorkerLogGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>WorkerLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkerLog__c.IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkerLog__c.WorkerLogGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>WorkerLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>WorkerLog__c.IsLastRun__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>WorkerLog__c.WorkerLogGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>WorkerLog__c.WorkerLogGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkerLogGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Worker__c</fullName>
        <label>Worker</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>Worker Log Groups</relationshipLabel>
        <relationshipName>WorkerLogGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Worker Log Group</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Worker Log Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worker Log Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>